Revision history for Dancer-Plugin-MobileDevice

0.03    2011-04-10
                [ Alberto Simões ]
                * Fix access to setting on a test
		* Add support to iPad/iPod

0.02	2010-12-13, Alexis Sukrieh
		[ Franck Cuny ]
		* Fix failing tests under Win32 environments

		[ David Precious ]
		* Make mobile layout configurable. 
		* Massive update of the documentation (POD and README)

		[ Alexis Sukrieh ]
		* Add a dependency to Dancer in Makefile.PL
		  (FIX RT issue #63844)

0.01    2010-12-03, Alexis Sukrieh
        First version, released for the Perl Dancer Advent Calendar 2010
