@@ -19,10 +19,22 @@ plan tests => scalar(@mobile_devices) + 1;
 use Dancer::Test;
 
 for my $md (@mobile_devices) {
-    $ENV{HTTP_USER_AGENT} = $md;
-    response_content_is [GET => '/'], 1, "agent $md is a mobile device";
+    $ENV{HTTP_USER_AGENT} = $md; # for Dancer 1.x
+    my $resp = dancer_response GET => '/', 
+        undef, 
+        { HTTP_USER_AGENT => $md };  # for Dancer 2.x
+
+    my $content = $resp->{content};
+
+    is $content => 1, "agent $md is a mobile device";
 }
 
 $ENV{HTTP_USER_AGENT} = 'Mozilla';
-response_content_is [GET => '/'], 0, "Mozilla is not a mobile device";
+    my $resp = dancer_response GET => '/', 
+        undef, 
+        { HTTP_USER_AGENT => 'Mozilla' };  # for Dancer 2.x
+
+my $content = $resp->{content};
+
+is $content => 0, "Mozilla is not a mobile device";
 
